refactor: change contacts from div to ul

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
     </main>
 
     <footer>
-      <div class="contacts">
-        <div class="phone"><a href="tel:+375295565297">+375295565297</a></div>
-        <div class="email"><a href="mailto:kristinagril@icloud.com">kristinagril@icloud.com</a></div>
-        <div class="github"><a target="_blank" href="https://github.com/kristinakazlovskaya">GitHub</a></div>
-      </div>
+      <ul class="contacts">
+        <li class="phone"><a href="tel:+375295565297">+375295565297</a></li>
+        <li class="email"><a href="mailto:kristinagril@icloud.com">kristinagril@icloud.com</a></li>
+        <li class="github"><a target="_blank" href="https://github.com/kristinakazlovskaya">GitHub</a></li>
+      </ul>
       <div class="about_school">
         <div class="school_logo">
           <a target="_blank" title="Курс «JavaScript/Front-end»" href="https://rs.school/js/"><img
