refactor: make the code valid

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     </header>
 
     <main>
-      <header>
+      <article>
+        <h1 class="hidden">Heading for article</h1>
         <div class="profile">
           <img src="img/photo.jpeg" alt="photo" width="250">
         </div>
@@ -28,12 +29,13 @@
             <h2 class="resume_position">Junior Front-End Developer</h2>
           </hgroup>
           <section class="about">
+            <h3 class="hidden">Heading for section</h3>
             Ambitious and diligent student. Eager to gain further experience in front-end development through an
             full-time position as a junior front-end developer. Able to learn quickly and easily. Passionate about
             programming.
           </section>
         </div>
-      </header>
+      </article>
       <div class="left">
         <section class="education">
           <h2 class="education_header">EDUCATION</h2>
