feat: update education and skills

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <strong>LINGUISTIC COLLEGE</strong>, Minsk<br>September 2014 - June 2017 |
             Secretary<br><br><strong>MINSK STATE LINGUISTIC UNIVERSITY</strong><br>September 2017 - June 2021 | English
             Teacher<br><br><strong>IT ACADEMY</strong>, Minsk<br>May 2021 - Present | Front-End
-            Developer<br><br><strong>RS SCHOOL</strong><br>July 2021 - Present | Front-End Developer
+            Developer<br><br>
           </div>
         </section>
         <section class="skills">
@@ -54,7 +54,6 @@
               <li>HTML5</li>
               <li>CSS3</li>
               <li>Git</li>
-              <li>Visual Studio Code</li>
               <li>Figma</li>
             </ul>
           </div>
